<resources>
    <string name="app_name">TP02_Yoan_Vandevelde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="nom">Nom</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="site_web">Site web</string>
    <string name="adresse">Adresse</string>
    <string name="a_propos">A propos</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="title_neighbor_add">Ajouter un voisin</string>
    <string name="title_neighbor_list">Liste des voisins</string>
</resources>